fix spacing on button

--- a/cms/medexCms/staticfiles/scss/examinations/edit_medical_team.scss
+++ b/cms/medexCms/staticfiles/scss/examinations/edit_medical_team.scss
@@ -17,3 +17,7 @@
   margin-bottom: 0 !important;
 }
 
+.expanded-margin {
+    margin-right: 1.25rem;
+}
+
